# Charm

./: .gitignore  CMakeLists.txt
Charm/: EventModelAdapter.cpp  EventModelFilter.h  TaskModelAdapter.cpp
Charm/Reports/: WeeklyTimeSheet.cpp
CharmMobile/: CMakeLists.txt  config-charmmobile.h.cmake  main.cpp
CharmMobile/lib/: Application.cpp  Application.h  Controller.cpp  Controller.h  Models.cpp  Models.h
CharmMobile/qml/: ActiveView.qml  DialogsPage.qml  EventView.qml  HomeView.qml  Main.qml  MainPage.qml  SimpleExamplesPage.qml  TaskSelectorView.qml  TextButton.qml  script.js
CharmMobile/qmlapplicationviewer/: qmlapplicationviewer.cpp
